--- a/frontend/src/components/Plan/BackupProgress/BackupProgress.module.scss
+++ b/frontend/src/components/Plan/BackupProgress/BackupProgress.module.scss
@@ -40,6 +40,7 @@
          color: var(--error-button-color);
          margin-left: 0.5rem;
          font-size: 0.9em;
+         cursor: pointer;
          i {
             font-style: normal;
          }
