--- a/frontend/src/components/Plan/Backups/Backups.module.scss
+++ b/frontend/src/components/Plan/Backups/Backups.module.scss
@@ -233,6 +233,22 @@
    }
 }
 
+.errorDetailsModal {
+   width: 100%;
+   max-height: 500px;
+   overflow: auto;
+   font-family: monospace;
+   box-sizing: border-box;
+   border-radius: 6px;
+   background-color: var(--primary-color-lighter);
+   p {
+      border-bottom: 1px solid;
+      padding: 12px;
+      margin: 0;
+      border-color: var(--line-color);
+   }
+}
+
 @media only screen and (max-width: 768px) {
    .backupsTable {
       overflow: auto;
